# demo_scaling_law

./: .gitignore  README.md  pyproject.toml  run_tests.py  train.py
configs/: tokenizer.yaml  train.yaml  train_smoke.yaml
configs/experiments/: smoke.yaml
infer_test/: README.md  one_shot.py  stream_chat.py
planner/: make_matrix.py  model_table.py  modeling.py
plot_fit/: run_all.py
plot_fit/common/: data.py  fit.py  fixed.py  isoflop.py  style.py
slurm/: cpu_smoke.sh  run_matrix.py  run_matrix.sbatch
src/demo_scaling/: __init__.py  config.py  dataset.py  infer.py  model.py  report.py  roi.py  stream_chat.py  tokenizer.py  train.py  utils.py
src/demo_scaling/analysis/: __init__.py  collect.py  data_efficiency.py  eval_complexity.py  isoflop.py  learning_curves.py  roi.py  scaling.py  visualize.py
src/demo_scaling/data/: __init__.py  bucketize.py  build_streams.py  clean_split.py  download.py  metrics.py  tokenize.py
tests/: test_core.py
train_data/: README.md
train_data/manifests/: default_sources.yaml  tiny_sources.yaml
