[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-scaling-law"
version = "0.1.0"
description = "A small, reproducible LLM scaling-law infrastructure demo."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "matplotlib",
  "torch",
  "tiktoken",
  "lmfit",
]

[project.optional-dependencies]
data = ["datasets"]

[tool.setuptools.packages.find]
where = ["src"]
